Cambio de estructura y se suma METROGAS

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-EDESUR_USER = mail@hotmail.com
+EDESUR_USER = tu_mail@mail.com
 EDESUR_PASS = clave
+
+METROGAS_USER = tu_mail@mail.com
+METROGAS_PASS = clave
+METROGAS_CTA_CONTRATO = 11223344555
