--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ EDESUR_PASS = clave
 METROGAS_USER = tu_mail@mail.com
 METROGAS_PASS = clave
 METROGAS_CTA_CONTRATO = 11223344555
+
+AYSA_USER = tu_mail@mail.com
+AYSA_PASS = clave
