--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/SebaM90/InfoServiceBot#readme",
   "dependencies": {
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "node-fetch": "^3.3.1",
     "puppeteer": "^19.9.1"
