--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Credenciales de acceso a los servicios --
 EDESUR_USER = tu_mail@mail.com
 EDESUR_PASS = clave
 
@@ -7,3 +8,9 @@ METROGAS_CTA_CONTRATO = 11223344555
 
 AYSA_USER = tu_mail@mail.com
 AYSA_PASS = clave
+# -----------------------------------------
+
+# Tiempos de espera máximo en milisegundos:
+EDESUR_TIMEOUT = 15000
+METROGAS_TIMEOUT = 15000
+AYSA_TIMEOUT = 15000
